[package]
name = "fasthash-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytes = "1.11.1"
anyhow = "1.0.102"
dashmap = "6.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.60", features = ["derive"] }
thiserror = "2.0.18"

[[bin]]
name = "fasthash-rs"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.26.0"
